@@ -1342,6 +1342,7 @@ void Game_window::stop_actor
 	{
 	main_actor->stop();		// Stop and set resting state.
 	paint();	// ++++++Necessary?
+	main_actor->get_followers();	// Have followers get to spot.
 	}
 
 #if 0
